UI for DNS servers put in place

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         android:title="@string/domain_blocker"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_vpn"
+        android:id="@+id/action_vpn_servers"
         android:title="@string/vpn"
         app:showAsAction="never" />
     <item
