Finished required UI development

--- a/app/src/main/res/layout/activity_blocklists.xml
+++ b/app/src/main/res/layout/activity_blocklists.xml
@@ -53,7 +53,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical">
 
