--- a/app/src/main/res/layout/activity_dns.xml
+++ b/app/src/main/res/layout/activity_dns.xml
@@ -4,52 +4,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="8dp"
+    android:background="@drawable/light_gray_border">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
+    <TextView
+        android:id="@+id/dns_servers_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="8dp"
-        android:background="@drawable/light_gray_border">
+        android:background="@drawable/light_gray_border"
+        android:padding="8dp"
+        android:text="@string/dns_servers" />
 
-        <TextView
-            android:id="@+id/dns_servers_title"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/light_gray_border"
+        android:orientation="vertical">
+
+        <Switch
+            android:id="@+id/dns_title_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/light_gray_border"
             android:padding="8dp"
-            android:text="@string/dns_servers" />
+            android:text="@string/custom_1_ipv4_title" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/custom_1_ipv4_dns"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/light_gray_border">
-
-            <Switch
-                android:id="@+id/dns_title_1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/custom_1_ipv4_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/dns_textbox_1"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/dns_add_1"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_1"
-                app:layout_constraintVertical_bias="0.0" />
+                android:layout_gravity="bottom"
+                android:layout_weight="1" />
 
             <ImageButton
                 android:id="@+id/dns_add_1"
@@ -57,42 +51,40 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/invisible_border"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_1"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@android:drawable/ic_menu_add" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/custom_2_ipv4_dns"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/light_gray_border"
+        android:orientation="vertical">
+
+        <Switch
+            android:id="@+id/dns_title_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/light_gray_border">
+            android:padding="8dp"
+            android:text="@string/custom_2_ipv4_title" />
 
-            <Switch
-                android:id="@+id/dns_title_2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/custom_2_ipv4_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/dns_textbox_2"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/dns_add_2"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_2"
-                app:layout_constraintVertical_bias="0.0" />
+                android:layout_gravity="bottom"
+                android:layout_weight="1" />
 
             <ImageButton
                 android:id="@+id/dns_add_2"
@@ -100,42 +92,40 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/invisible_border"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_2"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@android:drawable/ic_menu_add" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/custom_3_ipv6_dns"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/light_gray_border"
+        android:orientation="vertical">
+
+        <Switch
+            android:id="@+id/dns_title_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/light_gray_border">
+            android:padding="8dp"
+            android:text="@string/custom_3_ipv6_title" />
 
-            <Switch
-                android:id="@+id/dns_title_3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/custom_3_ipv6_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/dns_textbox_3"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/dns_add_3"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_3"
-                app:layout_constraintVertical_bias="0.0" />
+                android:layout_gravity="bottom"
+                android:layout_weight="1" />
 
             <ImageButton
                 android:id="@+id/dns_add_3"
@@ -143,42 +133,40 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/invisible_border"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_3"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@android:drawable/ic_menu_add" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/custom_4_ipv6_dns"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/light_gray_border"
+        android:orientation="vertical">
+
+        <Switch
+            android:id="@+id/dns_title_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/light_gray_border">
+            android:padding="8dp"
+            android:text="@string/custom_4_ipv6_title" />
 
-            <Switch
-                android:id="@+id/dns_title_4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/custom_4_ipv6_title"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/dns_textbox_4"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/dns_add_4"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_4"
-                app:layout_constraintVertical_bias="0.0" />
+                android:layout_gravity="bottom"
+                android:layout_weight="1" />
 
             <ImageButton
                 android:id="@+id/dns_add_4"
@@ -186,12 +174,10 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/invisible_border"
                 android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dns_title_4"
-                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@android:drawable/ic_menu_add" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
