--- a/app/src/main/res/layout/activity_domain_blocker.xml
+++ b/app/src/main/res/layout/activity_domain_blocker.xml
@@ -19,7 +19,10 @@
         android:id="@+id/total_queries"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
@@ -48,7 +51,10 @@
         android:id="@+id/queries_blocked"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_weight="1"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
@@ -85,7 +91,10 @@
         android:id="@+id/percent_blocked"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
@@ -114,7 +123,10 @@
         android:id="@+id/blocklist_domains"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
@@ -150,7 +162,9 @@
         android:id="@+id/linearLayout7"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:padding="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
