--- a/app/src/main/res/layout/activity_blocklists.xml
+++ b/app/src/main/res/layout/activity_blocklists.xml
@@ -22,8 +22,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/add_blocklist_url_title"
-            app:srcCompat="@android:drawable/ic_menu_add"
-            android:background="@drawable/invisible_border"/>
+            app:srcCompat="@android:drawable/ic_menu_add"/>
 
         <TextView
             android:id="@+id/add_blocklist_url_title"
