--- a/app/src/main/res/layout/list_item_black_list.xml
+++ b/app/src/main/res/layout/list_item_black_list.xml
@@ -1,33 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/blacklist_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/light_gray_border"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/blacklist_url"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:padding="8dp"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/blacklist_remove_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_vertical"
+        android:text="" />
 
     <ImageButton
-        android:id="@+id/blacklist_remove_button"
+        android:id="@+id/blacklist_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/invisible_border"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/blacklist_url"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
