--- a/app/src/main/res/layout/list_item_blocklist.xml
+++ b/app/src/main/res/layout/list_item_blocklist.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayout"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
     android:background="@drawable/light_gray_border">
 
     <TextView
@@ -13,30 +13,24 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/domain_status"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
 
     <Switch
         android:id="@+id/domain_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/blocklist_remove"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="8dp"/>
 
     <ImageButton
+        android:layout_margin="2dp"
+        android:padding="8dp"
         android:id="@+id/blocklist_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/invisible_border"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
