--- a/app/src/main/res/layout/list_item_black_white_list.xml
+++ b/app/src/main/res/layout/list_item_black_white_list.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/blacklist_container"
+    android:id="@+id/whitelist_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/light_gray_border"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/blacklist_url"
+        android:id="@+id/domain_url"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:padding="8dp"
-        android:layout_gravity="center_vertical"
-        android:text="" />
+        android:text=""
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"/>
 
     <ImageButton
-        android:id="@+id/blacklist_remove"
+        android:id="@+id/remove_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
