--- a/app/src/main/res/layout/list_item_query_log.xml
+++ b/app/src/main/res/layout/list_item_query_log.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/query_log_time"
+        android:id="@+id/time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/time_title"
@@ -26,7 +26,7 @@
         app:layout_constraintGuide_percent="0.25" />
 
     <TextView
-        android:id="@+id/query_log_domain"
+        android:id="@+id/domain"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/domain_title"
@@ -44,7 +44,7 @@
         app:layout_constraintGuide_percent="0.75" />
 
     <TextView
-        android:id="@+id/query_log_status"
+        android:id="@+id/status"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
