--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -39,6 +39,7 @@
             android:id="@+id/domain_blocker_info_box"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:clickable="true"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginTop="8dp"
